--- a/src/implementation.tex
+++ b/src/implementation.tex
@@ -1,7 +1,9 @@
 \chapter{Implémentation}
-\section{Choix effectués}
-\section{Organisation du travail}
+\section{Technologies utilisées}
 
+\section{Organisation du travail}
+\subsection{Choix effectués}
+\section{Réalisations}
 \subsection{Logiciel de test de répartition}
 \subsection{Portage sous GNU/Linux et Android}
 \subsection{Implémentation dans l'API OSSIA} 
