--- a/src/problematique.tex
+++ b/src/problematique.tex
@@ -46,3 +46,4 @@ Les adresses sont laissées à la discrétion des logiciels avec lesquels Score 
 \end{itemize}
 Un troisième point, limitant, à tenir en compte, est celui de la gestion de l'interactivité. Dans ce cas, l'impact de la latence due au réseau physique est inévitable.
 \section{Organisation au cours du stage}
+(TODO mettre diagramme de Gantt)
