--- a/src/rapport.tex
+++ b/src/rapport.tex
@@ -6,7 +6,7 @@
 \usepackage[french,english]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{relsize}
-\usepackage{color}
+\usepackage[usenames,dvipsnames]{color}
 \usepackage{listings}
 \usepackage{float}
 \usepackage{kpfonts}
@@ -114,6 +114,7 @@ escapeinside={\%*}{*)}
 \DeclareMathOperator{\phase}{phase}
 \DeclareMathOperator{\recompute}{recompute}
 
+\DeclareMathOperator{\entree}{E}
 \DeclareMathOperator{\pre}{Pre}
 \DeclareMathOperator{\post}{Post}
 \DeclareMathOperator{\shared}{Shared}
