--- a/src/existant.tex
+++ b/src/existant.tex
@@ -44,6 +44,8 @@ Par exemple, à l'origine, C. A. Petri avait conçu les réseaux qui portent auj
 
 \section{Projet OSSIA}
 (Présentation travaux Allombert, Toro, Arias, etc.)
+
+Modelling Data Processing for Interactive Scores Using Coloured Petri Nets
 \subsection{Les réseaux de Petri dans OSSIA}
 \subsection{Scénarios interactifs}
 \subsection{Temps souple}
@@ -51,7 +53,7 @@ Par exemple, à l'origine, C. A. Petri avait conçu les réseaux qui portent auj
 
 \section{Répartition}
 \subsection{Ouvrages de référence}
-Distributed Algorithms
+\cite{lynch1996distributed}
 
 \subsection{Développment}
 Modularity in the design of robust distributed algorithms
@@ -80,7 +82,8 @@ New Techniques and Tighter Bounds for Local Computation Algorithms (pertinence b
 \ac{NTP}
 \paragraph{PTP}
 \ac{PTP}
-Cf. articles sur précision et Android. 
+Cf. articles sur précision sur Android : 
+A Measurement of Time synchronization on Mobile Devices.
 
 Comparer avec NTP + implémentation existantes.
 
