--- a/src/stagepetri.bib
+++ b/src/stagepetri.bib
@@ -28,3 +28,11 @@
   year={1996},
   publisher={Morgan Kaufmann}
 }
+
+@article{arias2014modelling,
+	author = {Arias, Jaime and Desainte-Catherine, Myriam and Rueda, Camilo},
+	title = {Modelling Data Processing for Interactive Scores Using Coloured Petri Nets},
+	journal = { },
+	date = {submitted}
+}
+
