--- a/src/formalisation/figures/deplacement2.tex
+++ b/src/formalisation/figures/deplacement2.tex
@@ -48,19 +48,19 @@ Devient
   %alpha-sgmt
   \node[segment](I){In};
   \node [place] (Aalpha) [red, right of=I] {$A_1$};
-  \node [transition] (Talpha) [red,right of=Aalpha, label=$0$] {$T_{\alpha A}$};
+  \node [transition] (Talpha) [red,right of=Aalpha, label=$0$] {};
 
   \node[segment](I2) [left of=A2]{In 2};
   \node [place] (Aalpha2) [red, below of=Aalpha] {$A_2$};
 %  \node [transition] (Talpha2) [red,below of=Talpha, label=$0$] {};
 
-  \node [place] (A) [right of=Talpha] {$A_i$};
+  \node [place] (A) [right of=Talpha] {};
   
   \node [transition] (Ta) [right of=A, label=$t_A$] {$T_A$};
   \node [place,dotted] (Bprime) [right of=Ta] {$B'_1$};
   \node [place] (A3) [above of=Bprime] {$A_3$};
-  \node [place] (AS) [green,below of=A] {$A_B$};
-  \node [transition] (TS) [green,right of=AS, label=$t_A - x$] {$T_{\beta B}$};
+  \node [place] (AS) [green,below of=A] {};
+  \node [transition] (TS) [green,right of=AS, label=$t_A - \delta$] {};
   
   \node [place] (B) [right of=TS] {$B_1$};
   \node [transition] (Tb) [right of=B, label=$t_B$] {$T_B$};
