--- a/src/formalisation/figures/deplacementCol.tex
+++ b/src/formalisation/figures/deplacementCol.tex
@@ -122,7 +122,7 @@ Puis, après que $T_A - \delta_{Bleu \rightarrow Noir}$ soit écoulé :
 \end{tikzpicture}
 
 \vspace{1cm}
-Enfin, après que $T_A$ soit écoulé : 
+Enfin, après que $T_A$ soit écoulé (si $T_B-\delta_{Noir \rightarrow Bleu}$ ne l'est pas encore) : 
 \vspace{1cm}
 
 \begin{tikzpicture}[node distance=1.3cm,>=stealth,bend angle=45,auto]
