--- a/src/formalisation/figures/deplacementMethode1.tex
+++ b/src/formalisation/figures/deplacementMethode1.tex
@@ -1,3 +1,5 @@
+On déplace s sur un nœud $N_d$ : 
+
 \begin{tikzpicture}[node distance=1.3cm,>=stealth,bend angle=45,auto]
 
   \tikzstyle{segment}=[]
@@ -9,29 +11,40 @@
 
   \begin{scope}
     \node [transition] (Tk) [label=$t$] {};
-	\node [segment] (Pk) [left of=Tk] {$E_{R_i}$};
-	\node [segment] (S) [right of=Tk] {$S_m$};
-	\node [segment] (Sk) [below of=S] {$O_{R_i} \setminus S_m$};
+	\node [segment] (Pk) [left of=Tk] {$\pre(p)$};
+	\node [segment] (S) [right of=Tk] {$s$};
+	\node [segment] (Sk) [below of=S] {$\post(p) \setminus s$};
 			
   	\path
   		(Pk) edge[post] node {} (Tk)
   		(Tk) edge[post] node {} (S)
   			 edge[post] node {} (Sk);
+  			 
   \end{scope}
-   \begin{scope}[xshift=3cm, yshift=-0.8cm]
-   \node[segment] (G) {\huge $\Longrightarrow$};
-   
-   
-   \end{scope}
-  \begin{scope}[xshift=6cm]
-	\node [transition] (Tk) [label=$t - x$] {};
-  	\node [segment] (Pk) [left of=Tk] {$E_{R_i}$};
-  	\node [segment] (S) [right of=Tk] {$S_m$};
+  
+\end{tikzpicture}
+
+\vspace{1em}
+{\huge$\downarrow$}
+\vspace{1em}
+
+\begin{tikzpicture}[node distance=1.3cm,>=stealth,bend angle=45,auto]
+ 
+   \tikzstyle{segment}=[]
+   \tikzstyle{place}=[circle,thick,draw=blue!75,fill=blue!20,minimum size=6mm]
+   \tikzstyle{red place}=[place,draw=red!75,fill=red!20]
+   \tikzstyle{transition}=[rectangle,thick,draw=black!75,
+   fill=black!20,minimum size=4mm]
+ 
+  \begin{scope}
+	\node [transition] (Tk) [label=$t - \delta$] {};
+  	\node [segment] (Pk) [left of=Tk] {$\pre(p)$};
+  	\node [segment] (S) [right of=Tk] {$s$};
     
     \node [place] (PN) [below of=S] {};
-    \node [transition] (TN) [right of=PN,  label=$x$] {};
-    \node [segment] (Sk) [right of=TN] {$O_{R_i} \setminus S_m$};
-    \node [place] (C) [below of=Sk] {$Ck$};
+    \node [transition] (TN) [right of=PN,  label=$\delta$] {};
+    \node [segment] (Sk) [right of=TN] at (3, -1.3) {$\post(p) \setminus s$};
+    \node [segment] (C) [below of=Sk] {$\memory(s, p)$};
     
     \path
       (Pk) edge[post] node {} (Tk)
@@ -42,5 +55,9 @@
       	   edge[post] node {} (C); 
     	
    \end{scope}
+   
 \end{tikzpicture}
+
+~ \\ 
+Maintenant, $s$ peut être exécuté sur $N_d$ : le délai de transmission est pris en compte.
   
