--- a/src/formalisation/figures/duplicationEtRecoll.tex
+++ b/src/formalisation/figures/duplicationEtRecoll.tex
@@ -15,7 +15,7 @@
   \node [place] (C) [right of=Tb] {$C$};
   \node [transition] (Tc) [right of=C, label=$t_C$] {$T_C$};
   \node [place] (D) [right of=Tc] {$D$};
-  \node[segment](O) [right of=D]{Sortie};
+  \node[segment](O) [right of=D]{Out};
   
   \path
   		(I) edge[post] node {} (A)
