--- a/src/formalisation/figures/verifBoucle.tex
+++ b/src/formalisation/figures/verifBoucle.tex
@@ -13,11 +13,11 @@
 
   \begin{scope}
   \node[segment](I){In};
-  \node [blue,place] (A) [right of=I,label=$A$] {};
-  \node [blue,transition] (Ta) [right of=A, label=$T_A$] {};
-  \node [blue,place] (B) [right of=Ta,label=$B$] {};
-  \node [blue,transition] (Tb) [above of=Ta, label=$T_B$] {};
-  \node[segment](O) [right of=B]{Sortie};
+  \node [blue,place] (A) [right of=I] {$A$};
+  \node [black,transition] (Ta) [right of=A,label=$t_A$] {$T_A$};
+  \node [blue,place] (B) [right of=Ta] {$B$};
+  \node [black,transition] (Tb) [above of=Ta, label=$t_B$] {$T_B$};
+  \node[segment](O) [right of=B]{Out};
   
   \path
   		(I) edge[post] node {} (A)
@@ -49,27 +49,27 @@ Devient
 
   \begin{scope}
   \node[segment](I){In};
-  \node[red,place] (Aalpha) [right of=I,label=$A_\alpha$] {};
-  \node[red,transition] (Talpha) [right of=Aalpha, label=$T_\alpha$] {}; 
-  \node[green,place] (Aalpha0) [right of=Talpha,label=$A_{\alpha0}$] {};
+  \node[red,place] (Aalpha) [right of=I] {$A$};
+  \node[red,transition] (Talpha) [right of=Aalpha, label=$0$] {}; 
+  \node[green,place] (Aalpha0) [right of=Talpha] {};
   
-  \node[blue,place] (A) [above of=Aalpha0,label=$A$] {};
-  \node[blue,transition] (Ta) [right of=A, label=$T_A$] {};
-  \node[dotted,blue,place] (B0) [right of=Ta,label=$B_0$] {};
+  \node[blue,place] (A) [above of=Aalpha0] {};
+  \node[black,transition] (Ta) [right of=A, label=$t_A$] {$T_A$};
+  \node[dotted,blue,place] (B0) [right of=Ta] {$B_0$};
  
  
-  \node[green,transition] (Tbeta) [right of=Aalpha0, label=$T_\beta$] {};
-  \node[blue,place] (B) [right of=Tbeta,label=$B$] {};
-  \node[blue,transition] (Tb) [below of=Tbeta, label=$T_B$] {};
-  \node[segment](O) [right of=B]{Sortie};
+  \node[green,transition] (Tbeta) [right of=Aalpha0, label=$t_A - \delta_{N \rightarrow N_d}$] {};
+  \node[blue,place] (B) [right of=Tbeta] {$B$};
+  \node[black,transition] (Tb) [below of=Tbeta, label=$t_B$] {$T_B$};
+  \node[segment](O) [right of=B]{Out};
   
   \path
   		(I) edge[post] node {} (Aalpha)
-  		(Aalpha) edge[post] node {} (Talpha)
-  		(Talpha) edge[post] node {} (Aalpha0)
-  				 edge[post] node {} (A)
-  		(Aalpha0) edge[post] node {} (Tbeta)
-  		(Tbeta) edge[post] node {} (B)
+  		(Aalpha) edge[post,red] node {} (Talpha)
+  		(Talpha) edge[post,red] node {} (Aalpha0)
+  				 edge[post,red] node {} (A)
+  		(Aalpha0) edge[post,green] node {} (Tbeta)
+  		(Tbeta) edge[post,green] node {} (B)
   		(A) edge[post] node {} (Ta)
   		(Ta) edge[post] node {} (B0)
   		(B) edge[post] node {} (Tb)
@@ -100,28 +100,29 @@ Enfin :
   \begin{scope}
   % Début
     \node[segment](I){In};
-    \node[red,place] (Aalpha) [right of=I] {$A_\alpha$};
-    \node[red,transition] (Talpha) [right of=Aalpha, label=$0$] {$T_\alpha$}; 
+    \node[red,place] (Aalpha) [right of=I] {$A$};
+    \node[red,transition] (Talpha) [right of=Aalpha, label=$0$] {}; 
   
   % Branche centrale
-    \node[green, place] (Abeta2) [right of=Talpha] {$A_{\beta}$};
-    \node[green,transition] (Tbeta) [right of=Abeta2, label=$t_A-t_1$] {$T_\beta$};
+    \node[green, place] (Abeta2) [right of=Talpha] {};
+    \node[green,transition] (Tbeta) [right of=Abeta2, label=$t_A-\delta_{N \rightarrow N_d}$] {};
     
-    \node[red,place] (Balpha) [right of=Tbeta] {$B_\alpha$};
-    \node[red, transition] (Talpha2) [right of=Balpha, label=$0$] {$T_\alpha$};
+    \node[red,place] (Balpha) [right of=Tbeta] {$B$};
+    \node[red, transition] (Talpha2) [right of=Balpha, label=$0$] {};
     
-    \node[blue,place] (B) [right of=Talpha2] {$B$};
-    \node[blue, transition] (TB) [right of=B, label=$t_B$] {$T_B$};
+    \node[blue,place] (B) [right of=Talpha2] {};
+    \node[black, transition] (TB) [right of=B, label=$t_B$] {$T_B$};
     \node[blue, dotted, place] (AFake) [right of=TB] {$A_0$};
     
   % Branche du bas
-    \node[green, place] (Bbeta) [below of=B] {$B_\beta$};
-    \node[green,transition] (Tbeta2) [right of=Bbeta,label=$t_B-t_2$] {$T_{\beta2}$};
-    \node[segment](O) [above of=TB]{Sortie};
+    \node[segment](O) [below of=Talpha2]{Out};
+  
+    \node[green, place] (Bbeta) [below of=B] {};
+    \node[green,transition] (Tbeta2) [right of=Bbeta,label=$t_B-\delta_{N_d \rightarrow N}$] {};
   
   % Branche supérieure
-    \node[blue,place] (A) [above of=Abeta2] {$A$};
-    \node[blue,transition] (Ta) [right of=A, label=$t_A$] {$T_A$};
+    \node[blue,place] (A) [above of=Abeta2] {};
+    \node[black,transition] (Ta) [right of=A, label=$t_A$] {$T_A$};
     \node[dotted,blue,place] (B0) [right of=Ta] {$B_0$};
     
   \path
@@ -136,10 +137,10 @@ Enfin :
   		(Tbeta) edge[post,green] node {} (Balpha)
   		
   		(Balpha) edge[post,red] node {} (Talpha2)
+  				 edge[post] node {} (O)
   		(Talpha2) edge[post,red] node {} (B)
   		 edge[post,red] node {} (Bbeta)
   		(B) edge[post] node {} (TB)
-  			edge[post] node {} (O)
   		(TB) edge[post] node {} (AFake)
   		(Bbeta) edge[post,green] node {} (Tbeta2)
   		(Tbeta2) edge[post,draw=green!75,bend left] node {} (Aalpha)
